compiler/testData/diagnostics/tests/incompleteCode/emptyNamedAndSpreadArguments.diag.txt
/emptyNamedAndSpreadArguments.kt:19:8: error: no value passed for parameter 'a'
    one()
       ^^
/emptyNamedAndSpreadArguments.kt:37:12: error: an argument is already passed for this parameter
    many(, aa=,)
           ^^
/emptyNamedAndSpreadArguments.kt:38:12: error: an argument is already passed for this parameter
    many(, aa=, ,)
           ^^
/emptyNamedAndSpreadArguments.kt:39:12: error: an argument is already passed for this parameter
    many(, aa=, )
           ^^
/emptyNamedAndSpreadArguments.kt:42:10: error: cannot find a parameter with this name: bb
    many(bb=*)
         ^^
/emptyNamedAndSpreadArguments.kt:43:10: error: cannot find a parameter with this name: bb
    many(bb=)
         ^^

